// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleBadge should render correctly 1`] = `
.c3 {
  fill: #545456;
  cursor: pointer;
}

.c3:hover {
  fill: #757679;
}

.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 2.625rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.625rem;
  width: 2.625rem;
  padding: 0.6rem;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: #CCC;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.c0:hover {
  background-color: #004A7C;
}

.c2 {
  fill: #FFF;
}

.c2:hover {
  fill: #FFF;
}

<CircleBadge
  name="facebook"
  size="2.625rem"
  url="http://www.blockchain.com"
>
  <Styled(Link)
    size="2.625rem"
    url="http://www.blockchain.com"
  >
    <Link
      capitalize={false}
      className="c0"
      italic={false}
      opacity={1}
      size="2.625rem"
      uppercase={false}
      url="http://www.blockchain.com"
      weight={400}
    >
      <styled.a
        capitalize={false}
        className="c0"
        italic={false}
        opacity={1}
        size="2.625rem"
        uppercase={false}
        url="http://www.blockchain.com"
        weight={400}
      >
        <a
          className="c0 c1"
          opacity={1}
          size="2.625rem"
        >
          <Styled(BcFacebook)>
            <BcFacebook
              className="c2"
              selectable={true}
              size="fit-content"
            >
              <styled.svg
                className="c2"
                height="fit-content"
                selectable={true}
                viewBox="0 0 12 23"
                width="fit-content"
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="c2 c3"
                  height="fit-content"
                  viewBox="0 0 12 23"
                  width="fit-content"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12,6.82397126 L7.82523639,6.82397126 L7.82523639,4.95754409 C7.82523639,4.07968648 8.40626019,3.87491835 8.81512879,3.87491835 L11.7378546,3.87491835 L11.7378546,0.0127367734 L7.50342354,0 C3.66318878,0 2.93446365,2.87949053 2.93446365,4.72338341 L2.93446365,6.82397126 L0,6.82397126 L0,10.7429784 L2.93446365,10.7429784 L2.93446365,22.5 L7.82523639,22.5 L7.82523639,10.7429784 L11.5921096,10.7429784 L12,6.82397126 Z"
                  />
                </svg>
              </styled.svg>
            </BcFacebook>
          </Styled(BcFacebook)>
        </a>
      </styled.a>
    </Link>
  </Styled(Link)>
</CircleBadge>
`;

exports[`CircleBadge should render correctly with name 1`] = `
.c3 {
  fill: #545456;
  cursor: pointer;
}

.c3:hover {
  fill: #757679;
}

.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 2.625rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.625rem;
  width: 2.625rem;
  padding: 0.6rem;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: #CCC;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.c0:hover {
  background-color: #004A7C;
}

.c2 {
  fill: #FFF;
}

.c2:hover {
  fill: #FFF;
}

<CircleBadge
  name="linkedin"
  size="2.625rem"
  url="http://www.blockchain.com"
>
  <Styled(Link)
    size="2.625rem"
    url="http://www.blockchain.com"
  >
    <Link
      capitalize={false}
      className="c0"
      italic={false}
      opacity={1}
      size="2.625rem"
      uppercase={false}
      url="http://www.blockchain.com"
      weight={400}
    >
      <styled.a
        capitalize={false}
        className="c0"
        italic={false}
        opacity={1}
        size="2.625rem"
        uppercase={false}
        url="http://www.blockchain.com"
        weight={400}
      >
        <a
          className="c0 c1"
          opacity={1}
          size="2.625rem"
        >
          <Styled(BcLinkedin)>
            <BcLinkedin
              className="c2"
              selectable={true}
              size="fit-content"
            >
              <styled.svg
                className="c2"
                height="fit-content"
                selectable={true}
                viewBox="0 0 22 21"
                width="fit-content"
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="c2 c3"
                  height="fit-content"
                  viewBox="0 0 22 21"
                  width="fit-content"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.5273,11.5 C13.4223,11.5 12.5273,12.396 12.5273,13.5 L12.5273,20.5 L7.5273,20.5 C7.5273,20.5 7.5863,8.5 7.5273,7.5 L12.5273,7.5 L12.5273,8.985 C12.5273,8.985 14.0753,7.542 16.4663,7.542 C19.4273,7.542 21.5273,9.685 21.5273,13.846 L21.5273,20.5 L16.5273,20.5 L16.5273,13.5 C16.5273,12.396 15.6323,11.5 14.5273,11.5 L14.5273,11.5 Z M3.0173,5.5 L2.9883,5.5 C1.4773,5.5 0.5003,4.318 0.5003,3.019 C0.5003,1.69 1.5073,0.607 3.0473,0.607 C4.5883,0.607 5.5353,1.725 5.5653,3.054 C5.5653,4.354 4.5883,5.5 3.0173,5.5 L3.0173,5.5 Z M5.5273,20.5 L0.5273,20.5 L0.5273,7.5 L5.5273,7.5 L5.5273,20.5 Z"
                  />
                </svg>
              </styled.svg>
            </BcLinkedin>
          </Styled(BcLinkedin)>
        </a>
      </styled.a>
    </Link>
  </Styled(Link)>
</CircleBadge>
`;

exports[`CircleBadge should render correctly with size 1`] = `
.c3 {
  fill: #545456;
  cursor: pointer;
}

.c3:hover {
  fill: #757679;
}

.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 80px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  color: #004A7C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 80px;
  padding: 0.6rem;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: #CCC;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.c0:hover {
  background-color: #004A7C;
}

.c2 {
  fill: #FFF;
}

.c2:hover {
  fill: #FFF;
}

<CircleBadge
  name="facebook"
  size="80px"
  url="http://www.blockchain.com"
>
  <Styled(Link)
    size="80px"
    url="http://www.blockchain.com"
  >
    <Link
      capitalize={false}
      className="c0"
      italic={false}
      opacity={1}
      size="80px"
      uppercase={false}
      url="http://www.blockchain.com"
      weight={400}
    >
      <styled.a
        capitalize={false}
        className="c0"
        italic={false}
        opacity={1}
        size="80px"
        uppercase={false}
        url="http://www.blockchain.com"
        weight={400}
      >
        <a
          className="c0 c1"
          opacity={1}
          size="80px"
        >
          <Styled(BcFacebook)>
            <BcFacebook
              className="c2"
              selectable={true}
              size="fit-content"
            >
              <styled.svg
                className="c2"
                height="fit-content"
                selectable={true}
                viewBox="0 0 12 23"
                width="fit-content"
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="c2 c3"
                  height="fit-content"
                  viewBox="0 0 12 23"
                  width="fit-content"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12,6.82397126 L7.82523639,6.82397126 L7.82523639,4.95754409 C7.82523639,4.07968648 8.40626019,3.87491835 8.81512879,3.87491835 L11.7378546,3.87491835 L11.7378546,0.0127367734 L7.50342354,0 C3.66318878,0 2.93446365,2.87949053 2.93446365,4.72338341 L2.93446365,6.82397126 L0,6.82397126 L0,10.7429784 L2.93446365,10.7429784 L2.93446365,22.5 L7.82523639,22.5 L7.82523639,10.7429784 L11.5921096,10.7429784 L12,6.82397126 Z"
                  />
                </svg>
              </styled.svg>
            </BcFacebook>
          </Styled(BcFacebook)>
        </a>
      </styled.a>
    </Link>
  </Styled(Link)>
</CircleBadge>
`;
